--- a/app-swoosh/Base.lproj/Main.storyboard
+++ b/app-swoosh/Base.lproj/Main.storyboard
@@ -53,6 +53,9 @@
                                 <state key="normal" title="GET STARTED">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
+                                <connections>
+                                    <segue destination="QJb-37-kFv" kind="show" id="Q5a-Ae-1zW"/>
+                                </connections>
                             </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
@@ -91,14 +94,14 @@
             <objects>
                 <viewController id="QJb-37-kFv" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="EpT-da-FuZ">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="desiredLeagueBG" translatesAutoresizingMaskIntoConstraints="NO" id="jlG-BO-eOS">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
                             </imageView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="80" translatesAutoresizingMaskIntoConstraints="NO" id="6o0-k5-vtP">
-                                <rect key="frame" x="0.0" y="64" width="414" height="122"/>
+                                <rect key="frame" x="0.0" y="20" width="414" height="122"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="swooshLogo" translatesAutoresizingMaskIntoConstraints="NO" id="pHN-bb-9P5">
                                         <rect key="frame" x="147.5" y="0.0" width="119" height="20"/>
@@ -112,7 +115,7 @@
                                 </subviews>
                             </stackView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="WLH-FN-eEg">
-                                <rect key="frame" x="20" y="236" width="374" height="190"/>
+                                <rect key="frame" x="20" y="192" width="374" height="190"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Q0C-4B-qU9" customClass="BorderButton" customModule="app_swoosh" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="0.0" width="374" height="50"/>
@@ -150,7 +153,7 @@
                                 </subviews>
                             </stackView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IYc-SI-eZA" customClass="BorderButton" customModule="app_swoosh" customModuleProvider="target">
-                                <rect key="frame" x="20" y="792" width="374" height="50"/>
+                                <rect key="frame" x="20" y="738" width="374" height="50"/>
                                 <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.40077157569999999" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="TIs-rx-GZi"/>
@@ -160,10 +163,22 @@
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pZO-pi-6t5">
+                                <rect key="frame" x="29" y="15" width="29" height="24"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="29" id="IfI-iP-17X"/>
+                                    <constraint firstAttribute="height" constant="24" id="ePJ-mm-T5O"/>
+                                </constraints>
+                                <state key="normal" image="backButton"/>
+                                <connections>
+                                    <segue destination="IYE-9X-6B1" kind="unwind" unwindAction="unwindFromSkillVCWithUnwindSegue:" id="YcW-Q2-bd1"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="mOE-Ih-8Ei"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
+                            <constraint firstItem="pZO-pi-6t5" firstAttribute="top" secondItem="mOE-Ih-8Ei" secondAttribute="top" constant="15" id="5rC-bl-nrA"/>
                             <constraint firstItem="6o0-k5-vtP" firstAttribute="leading" secondItem="mOE-Ih-8Ei" secondAttribute="leading" id="9Xi-vN-Y4K"/>
                             <constraint firstItem="jlG-BO-eOS" firstAttribute="leading" secondItem="mOE-Ih-8Ei" secondAttribute="leading" id="Cr4-ul-Arh"/>
                             <constraint firstItem="WLH-FN-eEg" firstAttribute="top" secondItem="6o0-k5-vtP" secondAttribute="bottom" constant="50" id="EXo-ge-V8k"/>
@@ -176,11 +191,14 @@
                             <constraint firstItem="mOE-Ih-8Ei" firstAttribute="trailing" secondItem="6o0-k5-vtP" secondAttribute="trailing" id="kWH-HL-JY0"/>
                             <constraint firstItem="WLH-FN-eEg" firstAttribute="leading" secondItem="mOE-Ih-8Ei" secondAttribute="leading" constant="20" id="pkb-iR-cLI"/>
                             <constraint firstItem="mOE-Ih-8Ei" firstAttribute="trailing" secondItem="WLH-FN-eEg" secondAttribute="trailing" constant="20" id="sp3-pa-OFt"/>
+                            <constraint firstItem="pZO-pi-6t5" firstAttribute="leading" secondItem="mOE-Ih-8Ei" secondAttribute="leading" constant="29" id="wzx-ZQ-Az3"/>
                             <constraint firstItem="IYc-SI-eZA" firstAttribute="leading" secondItem="mOE-Ih-8Ei" secondAttribute="leading" constant="20" id="x3B-x1-Nu7"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="ZZV-Ta-Bw7"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="xfo-4K-hyC" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <exit id="IYE-9X-6B1" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="555.07246376811599" y="61.607142857142854"/>
         </scene>
@@ -273,6 +291,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="backButton" width="29" height="24"/>
         <image name="beginnerBallerBG" width="414" height="736"/>
         <image name="desiredLeagueBG" width="414" height="736"/>
         <image name="swooshLogo" width="119" height="20"/>
