--- a/app-swoosh/Base.lproj/Main.storyboard
+++ b/app-swoosh/Base.lproj/Main.storyboard
@@ -8,10 +8,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--WelcomeVC-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="app_swoosh" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="WelcomeVC" customModule="app_swoosh" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -80,19 +80,15 @@
                             <constraint firstItem="lto-HW-7hz" firstAttribute="top" secondItem="VnX-gh-7bW" secondAttribute="bottom" constant="15" id="yPL-dx-cSz"/>
                         </constraints>
                     </view>
-                    <connections>
-                        <outlet property="bgImg" destination="tZT-Nm-7KN" id="VTp-HL-s3x"/>
-                        <outlet property="swoosh" destination="3Pg-kd-7AQ" id="iAC-3f-Qko"/>
-                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-226.08695652173915" y="61.607142857142854"/>
         </scene>
-        <!--View Controller-->
+        <!--LeagueVC-->
         <scene sceneID="krC-W2-L0i">
             <objects>
-                <viewController id="QJb-37-kFv" sceneMemberID="viewController">
+                <viewController id="QJb-37-kFv" customClass="LeagueVC" customModule="app_swoosh" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="EpT-da-FuZ">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -202,10 +198,10 @@
             </objects>
             <point key="canvasLocation" x="555.07246376811599" y="61.607142857142854"/>
         </scene>
-        <!--View Controller-->
+        <!--SkillVC-->
         <scene sceneID="nLu-Am-nzH">
             <objects>
-                <viewController id="gOZ-Au-DSb" sceneMemberID="viewController">
+                <viewController id="gOZ-Au-DSb" customClass="SkillVC" customModule="app_swoosh" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="ED5-hi-nrV">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
