--- a/app-swoosh/Base.lproj/Main.storyboard
+++ b/app-swoosh/Base.lproj/Main.storyboard
@@ -54,7 +54,7 @@
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
                                 <connections>
-                                    <segue destination="QJb-37-kFv" kind="show" id="Q5a-Ae-1zW"/>
+                                    <segue destination="QJb-37-kFv" kind="presentation" modalPresentationStyle="fullScreen" id="1Oj-TT-OOS"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -90,14 +90,14 @@
             <objects>
                 <viewController id="QJb-37-kFv" customClass="LeagueVC" customModule="app_swoosh" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="EpT-da-FuZ">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="desiredLeagueBG" translatesAutoresizingMaskIntoConstraints="NO" id="jlG-BO-eOS">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                             </imageView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="80" translatesAutoresizingMaskIntoConstraints="NO" id="6o0-k5-vtP">
-                                <rect key="frame" x="0.0" y="20" width="414" height="122"/>
+                                <rect key="frame" x="0.0" y="64" width="414" height="122"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="swooshLogo" translatesAutoresizingMaskIntoConstraints="NO" id="pHN-bb-9P5">
                                         <rect key="frame" x="147.5" y="0.0" width="119" height="20"/>
@@ -111,7 +111,7 @@
                                 </subviews>
                             </stackView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="WLH-FN-eEg">
-                                <rect key="frame" x="20" y="192" width="374" height="190"/>
+                                <rect key="frame" x="20" y="236" width="374" height="190"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Q0C-4B-qU9" customClass="BorderButton" customModule="app_swoosh" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="0.0" width="374" height="50"/>
@@ -149,7 +149,7 @@
                                 </subviews>
                             </stackView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IYc-SI-eZA" customClass="BorderButton" customModule="app_swoosh" customModuleProvider="target">
-                                <rect key="frame" x="20" y="738" width="374" height="50"/>
+                                <rect key="frame" x="20" y="792" width="374" height="50"/>
                                 <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.40077157569999999" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="TIs-rx-GZi"/>
@@ -158,9 +158,12 @@
                                 <state key="normal" title="NEXT">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
+                                <connections>
+                                    <action selector="onNextTapped:" destination="QJb-37-kFv" eventType="touchUpInside" id="Mcl-9u-fb4"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pZO-pi-6t5">
-                                <rect key="frame" x="29" y="15" width="29" height="24"/>
+                                <rect key="frame" x="29" y="59" width="29" height="24"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="29" id="IfI-iP-17X"/>
                                     <constraint firstAttribute="height" constant="24" id="ePJ-mm-T5O"/>
@@ -192,6 +195,9 @@
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="ZZV-Ta-Bw7"/>
+                    <connections>
+                        <segue destination="gOZ-Au-DSb" kind="presentation" identifier="skillVCSegue" modalPresentationStyle="fullScreen" id="a8s-8z-VNb"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="xfo-4K-hyC" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
                 <exit id="IYE-9X-6B1" userLabel="Exit" sceneMemberID="exit"/>
